// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the correct snapshot when loading 1`] = `
<header>
  <div
    className="header-div"
  >
    <div
      className="title-div"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        id="title"
        to="/"
      >
        BikeSee
      </NavLink>
      <div
        className="subheader-container"
      >
        <h3
          className="loading-text"
        >
          Welcome Karin
        </h3>
        <h3
          className="loading-text"
        >
          Loading Data...
        </h3>
      </div>
    </div>
    <nav>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="nav-links"
        exact={true}
        to="/"
      >
        <i
          className="fas fa-bicycle"
        />
        <div>
          Stations
        </div>
      </NavLink>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="nav-links"
        to="/my-stops"
      >
        <i
          className="fas fa-clipboard-list"
        />
        <div>
          My Stops
        </div>
      </NavLink>
      <Link
        className="nav-links"
        id="sign-out"
        onClick={[Function]}
        replace={false}
        to="/"
      >
        <i
          className="fas fa-user"
        />
        <div>
          Sign Out
        </div>
      </Link>
    </nav>
  </div>
</header>
`;

exports[`Header should match the correct snapshot when on the home page 1`] = `
<header>
  <div
    className="header-div"
  >
    <div
      className="title-div"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        id="title"
        to="/"
      >
        BikeSee
      </NavLink>
      <div
        className="subheader-container"
      >
        <h3
          className="loading-text"
        >
          Welcome Karin
        </h3>
        <h3
          className="loading-text"
        >
          Click on a bike icon to view a station and get started.
        </h3>
      </div>
    </div>
    <nav>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="nav-links"
        exact={true}
        to="/"
      >
        <i
          className="fas fa-bicycle"
        />
        <div>
          Stations
        </div>
      </NavLink>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="nav-links"
        to="/my-stops"
      >
        <i
          className="fas fa-clipboard-list"
        />
        <div>
          My Stops
        </div>
      </NavLink>
      <Link
        className="nav-links"
        id="sign-out"
        onClick={[Function]}
        replace={false}
        to="/"
      >
        <i
          className="fas fa-user"
        />
        <div>
          Sign Out
        </div>
      </Link>
    </nav>
  </div>
</header>
`;

exports[`Header should match the correct snapshot when on the login page 1`] = `
<header>
  <div
    className="header-div"
  >
    <div
      className="title-div"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        id="title"
        to="/"
      >
        BikeSee
      </NavLink>
      <div
        className="subheader-container"
      >
        <h3
          className="loading-text"
        >
          Welcome Karin
        </h3>
      </div>
    </div>
    <nav>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="nav-links"
        exact={true}
        to="/"
      >
        <i
          className="fas fa-bicycle"
        />
        <div>
          Stations
        </div>
      </NavLink>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="nav-links"
        to="/my-stops"
      >
        <i
          className="fas fa-clipboard-list"
        />
        <div>
          My Stops
        </div>
      </NavLink>
      <Link
        className="nav-links"
        id="sign-out"
        onClick={[Function]}
        replace={false}
        to="/"
      >
        <i
          className="fas fa-user"
        />
        <div>
          Sign Out
        </div>
      </Link>
    </nav>
  </div>
</header>
`;

exports[`Header should match the correct snapshot when on the my-stops page 1`] = `
<header>
  <div
    className="header-div"
  >
    <div
      className="title-div"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        id="title"
        to="/"
      >
        BikeSee
      </NavLink>
      <div
        className="subheader-container"
      >
        <h3
          className="loading-text"
        >
          Welcome Karin
        </h3>
      </div>
    </div>
    <nav>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="nav-links"
        exact={true}
        to="/"
      >
        <i
          className="fas fa-bicycle"
        />
        <div>
          Stations
        </div>
      </NavLink>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="nav-links"
        to="/my-stops"
      >
        <i
          className="fas fa-clipboard-list"
        />
        <div>
          My Stops
        </div>
      </NavLink>
      <Link
        className="nav-links"
        id="sign-out"
        onClick={[Function]}
        replace={false}
        to="/"
      >
        <i
          className="fas fa-user"
        />
        <div>
          Sign Out
        </div>
      </Link>
    </nav>
  </div>
</header>
`;

exports[`Header should match the correct snapshot when on the stations page 1`] = `
<header>
  <div
    className="header-div"
  >
    <div
      className="title-div"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        id="title"
        to="/"
      >
        BikeSee
      </NavLink>
      <div
        className="subheader-container"
      >
        <h3
          className="loading-text"
        >
          Welcome Karin
        </h3>
      </div>
    </div>
    <nav>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="nav-links"
        exact={true}
        to="/"
      >
        <i
          className="fas fa-bicycle"
        />
        <div>
          Stations
        </div>
      </NavLink>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="nav-links"
        to="/my-stops"
      >
        <i
          className="fas fa-clipboard-list"
        />
        <div>
          My Stops
        </div>
      </NavLink>
      <Link
        className="nav-links"
        id="sign-out"
        onClick={[Function]}
        replace={false}
        to="/"
      >
        <i
          className="fas fa-user"
        />
        <div>
          Sign Out
        </div>
      </Link>
    </nav>
  </div>
</header>
`;
